#1147: Converted GetMimeTypes UC to extend BasePaginatedMultipleEntitiesCommand